# nannyml-cloud-sdk

./: .bumpversion.cfg  .gitignore  404.html  Makefile  README.md  devbox.json  gen_api_reference_pages.py  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  schema.graphql
.github/workflows/: dev.yml  release.yaml  release.yml
api_reference/client/: index.html
api_reference/data/: index.html
api_reference/enums/: index.html
api_reference/errors/: index.html
api_reference/experiment/enums/: index.html
api_reference/experiment/experiment/: index.html
api_reference/experiment/run/: index.html
api_reference/experiment/schema/: index.html
api_reference/model/: index.html
api_reference/model_evaluation/enums/: index.html
api_reference/model_evaluation/model/: index.html
api_reference/model_evaluation/run/: index.html
api_reference/model_evaluation/schema/: index.html
api_reference/monitoring/configuration/: index.html
api_reference/monitoring/custom_metric/: index.html
api_reference/monitoring/enums/: index.html
api_reference/monitoring/model/: index.html
api_reference/monitoring/run/: index.html
api_reference/monitoring/schema/: index.html
api_reference/run/: index.html
api_reference/schema/: index.html
api_reference/summary/: index.html
docs/: gen_api_reference_pages.py  index.md
graphql/queries/: InspectSchema.graphql  ListModels.graphql  UploadDataset.graphql
nannyml_cloud_sdk/: __init__.py  _typing.py  client.py  data.py  enums.py  errors.py  model.py  monitoring_run.py  run.py  schema.py
nannyml_cloud_sdk/experiment/: enums.py  experiment.py  run.py  schema.py
nannyml_cloud_sdk/graphql_client/: __init__.py  base_client.py  base_model.py  client.py  enums.py  exceptions.py  input_types.py  inspect_schema.py  list_models.py  upload_dataset.py
nannyml_cloud_sdk/model_evaluation/: __init__.py  enums.py  model.py  run.py  schema.py
nannyml_cloud_sdk/monitoring/: __init__.py  configuration.py  custom_metric.py  enums.py  model.py  run.py  schema.py
search/: search_index.json
src/nannyml_cloud_sdk/: _typing.py  client.py  enums.py
src/nannyml_cloud_sdk/experiment/: __init__.py  enums.py  experiment.py
src/nannyml_cloud_sdk/model_evaluation/: enums.py  model.py  run.py
src/nannyml_cloud_sdk/monitoring/: __init__.py  configuration.py
tests/: conftest.py  test_data.py  test_model.py  test_run.py  test_schema.py
tests/experiment/: test_experiment.py  test_run.py  test_schema.py
tests/model_evaluation/: test_model.py  test_run.py  test_schema.py
tests/monitoring/: test_model.py  test_run.py  test_schema.py
