[tool.poetry]
name = "nannyml-cloud-sdk"
version = "0.1.0"
description = "Python SDK for interacting with NannyML Cloud"
authors = [
    "Niels Nuyttens <niels@nannyml.com>",
    "Michael Van de Steene <michael@nannyml.com>"
]
readme = "README.md"
packages = [{include = "nannyml_cloud_sdk"}]

[tool.poetry.dependencies]
python = "^3.8.1"
gql = {extras = ["requests"], version = "^3.5.0b1", allow-prereleases = true}
typing-extensions = {version = "^4.8.0", python = "<3.9"}

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
mypy = "^1.6.1"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ariadne-codegen]
queries_path = "graphql/queries"
schema_path = "graphql/schema.graphql"
target_package_path = "nannyml_cloud_sdk"
async_client = false
opentelemetry_client = true
