[tool.poetry]
name = "nannyml-cloud-sdk"
version = "0.1.0"
description = "Python SDK for interacting with NannyML Cloud"
authors = [
    "Niels Nuyttens <niels@nannyml.com>",
    "Michael Van de Steene <michael@nannyml.com>"
]
readme = "README.md"
packages = [{include = "nannyml_cloud_sdk"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
gql = {extras = ["requests"], version = "^3.5.0b1", allow-prereleases = true}
typing-extensions = {version = "^4.8.0", python = "<3.9"}
frozendict = "^2.3.8"
pandas = "^1.5"
pyarrow = "^12.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
mypy = "^1.6.1"
pytest = "^7.1.1"
pandas-stubs = "^1.5"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.8"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}
black = "^23.11.0"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ariadne-codegen]
queries_path = "graphql/queries"
schema_path = "graphql/schema.graphql"
target_package_path = "nannyml_cloud_sdk"
async_client = false
opentelemetry_client = true
