[project]
name = "nannyml-cloud-sdk"
version = "0.1.7"
authors = [
  { name="Michael Van de Steene", email="michael@nannyml.com" },
  { name="Niels Nuyttens", email="niels@nannyml.com" },
]
description = "The Python SDK for interacting with NannyML Cloud"
readme = "README.md"
requires-python = ">=3.9.16"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "frozendict>=2.4.6",
    "gql[requests]>=3.5.0",
    "pandas>=2.2.3",
    "pyarrow>=18.1.0",
    "typing-extensions>=4.12.2",
]

[dependency-groups]
dev = [
    "bump2version>=1.0.1",
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-material>=9.5.48",
    "mkdocstrings[python]>=0.27.0",
    "pytest>=8.3.4",
    "ruff>=0.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["README.md", "pyproject.toml", "src"]
packages = ["src/nannyml_cloud_sdk"]
